--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,25 +1,66 @@
-<div class="row" style="margin-top: 20px">
-    <div class="col-xs-6 col-xs-offset-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Import Json Files</h3>
+<div class="row">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#id1" aria-controls="Import" role="tab"
+                                                  data-toggle="tab"><label>Import
+            Json Files</label></a></li>
+        <li role="presentation"><a href="#id2" aria-controls="Crawling" role="tab" data-toggle="tab"><label>Crawling
+            website</label></a></li>
+    </ul>
+
+    <!-- Tab panes -->
+    <div class="tab-content col-xs-12">
+        <div role="id1" class="tab-pane active" id="id1">
+            <div style="margin-top: 20px">
+                <div class="col-xs-8 col-xs-offset-2">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Import Json Files</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form name="form" ng-submit="submit()">
+                                <div class="form-group">
+                                    <button ng-model="files" class="btn btn-warning" ngf-select
+                                            ngf-change="listFiles()"
+                                            ngf-multiple="true" ngf-max-files="5">
+                                        Select files
+                                    </button>
+                                </div>
+                                <div>
+                                    <p ng-repeat="name in list">
+                                        {{name}}
+                                    </p>
+                                </div>
+                                <button type="submit" class="btn btn-primary" data-ng-disabled="!canSubmit()">
+                                    Import
+                                </button>
+                                <p ng-if="status" style="color: red">{{message}}</p>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="panel-body">
-                <form name="form" ng-submit="submit()">
-                    <div class="form-group">
-                        <button ng-model="files" class="btn btn-warning" ngf-select ngf-change="listFiles()"
-                                ngf-multiple="true" ngf-max-files="5">
-                            Select files
-                        </button>
+        </div>
+        <div role="id2" class="tab-pane" id="id2">
+            <div style="margin-top: 20px">
+                <div class="col-xs-8 col-xs-offset-2">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Import Json Files</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form name="form2" ng-submit="crwaling()">
+                                <div class="form-group">
+                                    <input class="form-control" ng-model="url" name="url" placeholder="Enter Johnny's url :->>>>>>>>>>"/>
+                                    <span>eg: https://www.pinnaclesports.com/en/odds/specials/entertainment/academy-awards</span>
+                                </div>
+                                <button type="submit" class="btn btn-primary" data-ng-disabled="!url">
+                                    Submit
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                    <div>
-                        <p ng-repeat="name in list">
-                            {{name}}
-                        </p>
-                    </div>
-                    <button type="submit" class="btn btn-primary" data-ng-disabled="!canSubmit()">Import</button>
-                    <p ng-if="status" style="color: red">{{message}}</p>
-                </form>
+                </div>
             </div>
         </div>
     </div>
